WebCore:

2009-07-23  Brady Eidson  <beidson@apple.com>

        Reviewed by Geoff Garen.

        WebCore has a few places that don't gracefully handle a null request returned from willSendRequest.
        https://bugs.webkit.org/show_bug.cgi?id=27595

        Test: http/tests/misc/will-send-request-returns-null-on-redirect.html

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::removeResource): Null-check the request URL.

        * platform/network/cf/ResourceHandleCFNet.cpp: Ditto, and return null instead of creating an empty one.
        (WebCore::willSendRequest):

WebKit/win:

2009-07-23  Brady Eidson  <beidson@apple.com>

        Reviewed by Geoff Garen.

        WebFrameLoaderClient on Windows doesn't gracefully handle a null request returned from willSendRequest.
        https://bugs.webkit.org/show_bug.cgi?id=27595

        * WebCoreSupport/WebFrameLoaderClient.cpp:
        (WebFrameLoaderClient::dispatchWillSendRequest):

WebKitTools:

2009-07-23  Brady Eidson  <beidson@apple.com>

        Reviewed by Geoff Garen.

        WebCore has a few places that don't gracefully handle a null request returned from willSendRequest.
        https://bugs.webkit.org/show_bug.cgi?id=27595

        Add the ability to tell the LayoutTestController to return a null request for willSendRequest
        redirect callbacks.

        * DumpRenderTree/LayoutTestController.cpp:
        (LayoutTestController::LayoutTestController):
        (setWillSendRequestReturnsNullOnRedirectCallback):
        (LayoutTestController::staticFunctions):
        * DumpRenderTree/LayoutTestController.h:
        (LayoutTestController::willSendRequestReturnsNullOnRedirect):
        (LayoutTestController::setWillSendRequestReturnsNullOnRedirect):

        * DumpRenderTree/mac/ResourceLoadDelegate.mm:
        (-[ResourceLoadDelegate webView:resource:willSendRequest:redirectResponse:fromDataSource:]):
        * DumpRenderTree/win/ResourceLoadDelegate.cpp:
        (ResourceLoadDelegate::willSendRequest):

LayoutTests:

2009-07-23  Brady Eidson  <beidson@apple.com>

        Reviewed by Geoff Garen.

        WebCore has a few places that don't gracefully handle a null request returned from willSendRequest.
        https://bugs.webkit.org/show_bug.cgi?id=27595

        * http/tests/misc/resources/redirect-to-http-url.php: Added.
        * http/tests/misc/will-send-request-returns-null-on-redirect-expected.txt: Added.
        * http/tests/misc/will-send-request-returns-null-on-redirect.html: Added.
        * platform/gtk/Skipped:
        * platform/qt/Skipped:



Canonical link: https://commits.webkit.org/37918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46308 268f45cc-cd09-0410-ab3c-d52691b4dbfc