WebCore/platform/network/cf/ResourceHandleCFNet.cpp
@@ -119,6 +119,9 @@ CFURLRequestRef willSendRequest(CFURLConnectionRef conn, CFURLRequestRef cfReque
     ResourceRequest request(cfRequest);
     handle->willSendRequest(request, cfRedirectResponse);
 
+    if (request.isNull())
+        return 0;
+
     cfRequest = request.cfURLRequest();
 
     CFRetain(cfRequest);
