WebKit/win/WebCoreSupport/WebFrameLoaderClient.cpp
@@ -187,6 +187,11 @@ void WebFrameLoaderClient::dispatchWillSendRequest(DocumentLoader* loader, unsig
     if (webURLRequest == newWebURLRequest)
         return;
 
+    if (!newWebURLRequest) {
+        request = ResourceRequest();
+        return;
+    }
+
     COMPtr<WebMutableURLRequest> newWebURLRequestImpl(Query, newWebURLRequest);
     if (!newWebURLRequestImpl)
         return;
