LayoutTests/http/tests/misc/resources/redirect-to-http-url.php
@@ -1,0 +1,4 @@
+<?php
+    header('Location: http://www.example.com/');
+    header('HTTP/1.0 302 Found');
+?>
